--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>MFEE32-13號-廖盈棋</h1>
-									<p>GOGOGO</p>
+									<p>立志當個碼仔</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -82,44 +82,42 @@
 								努力當個碼仔中~
 							</p>
 							<section>
-								<!-- <div class="row">
+								<div class="row">
 									<div class="col-4 col-6-medium col-12-small">
-										<a target="_blank" href="Getdata/index.html" class="image fit"><img src="images/Getdata.jpg" ></a>
+										<a target="_blank" href="20221209002/index.html" class="image fit"><img src="images/pic08.jpg" alt="">1. Game</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										<a target="_blank" href="color/index.html" class="image fit"><img src="images/pic07.jpg" alt="">2. background color</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+										<a target="_blank" href="date/index.html" class="image fit"><img src="images/pic06.jpg" alt="">3. date</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										<a target="_blank" href="location/index.html" class="image fit"><img src="images/pic05.jpg" alt="">4. location</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										<a target="_blank" href="mix/index.html" class="image fit"><img src="images/pic04.jpg" alt="">5. mix</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										<a target="_blank" href="progressBar/index.html" class="image fit"><img src="images/pic03.jpg" alt="">6. progressBar</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+										<a target="_blank" href="sun/index.html"  class="image fit"><img src="images/pic02.jpg" alt="">7. sun</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+										<a target="_blank" href="textFile/index.html" class="image fit"><img src="images/pic01.jpg" alt="">8. TextFile</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+										<a target="_blank" href="VideoCheck/index.html" class="image fit"><img src="images/pic08.jpg" alt="">9. VideoCheck</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+										<a target="_blank" href="VideoHTML5/index.html" class="image fit"><img src="images/pic07.jpg" alt="">10. VideoHTML5</a>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+										<a target="_blank" href="wheel/index.html" class="image fit"><img src="images/pic06.jpg" alt="">11. wheel</a>
 									</div>
-									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-									</div> 
-								</div> -->
+								 
+								</div>
 							</section>
 						</article>
 
